cluster/apps/flux-system/flux-operator/app/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator-web
  namespace: flux-system
  annotations:
    gatus.io/enabled: "true"
spec:
  parentRefs:
    - name: internal-gateway
      namespace: networking
  hostnames:
    - "flux-ui.home.${SECRET_DOMAIN}"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: rfc1918-ips
      backendRefs:
        - name: flux-operator
          port: 9080
